<resources>
	<string name="app_name">校園 Wifi</string>
	<!-- Android Studio 範例內容
			<string name="action_settings">設定</string>-->
	<string name="about_application_introduction">《校園 Wifi 自動登入》是用來實現智慧型行動裝置自動登入「大學校園無線網路」的應用軟體。</string>
	<string name="about_application_setup_prompt">如您尚未設定登入資訊，請點擊右上角的「設定登入資訊」選項開始設定；如果您已經設定好了當您在連上大學校園無線網路時本軟體便會自動在背景進行登入的動作，不需要再啟動本軟體。</string>
	<string name="about_application_logo_description">應用軟體圖示</string>
	<string name="about_application_seeking_for_help">若您遇到問題請至我們的議題追蹤系統建檔軟體缺陷報告：</string>
	<string name="about_application_issue_tracker_url" translatable="false"><a href="https://github.com/NTOUCS-Android-App-Design-1041-Team-16/NTOU-Wifi-AutoLogin/issues">https://github.com/peter279k/NTOU-Wifi-AutoLogin/tree/peter_version</a></string>
	<string name="menu_login_settings">設定登入資訊</string>
	<string name="login_settings_header">登入資訊設定</string>
	<string name="login_settings_student_id">信箱：</string>
	<string name="login_settings_password">密碼：</string>
	<string name="login_settings_checkbox_is_autologin">連線到海大無線網路時自動登入</string>
	<string name="login_settings_checkbox_login_even_if_network_is_unsafe">即使偵測到網路有問題仍登入網路（危險！）</string>
	<string name="login_settings_button_login_test">手動登入／登入測試</string>
	<string name="about_application_header_seeking_for_help">尋求幫助</string>
	<string name="hint_student_number">請輸入學校信箱</string>
	<string name="hint_student_password">請輸入密碼</string>
	<string name="test_school">目前測試過的學校：台東大學，海大以及交大，其他學校尚未測試；本服務支援校際漫遊</string>
</resources>
