<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_below="@id/toolbar_about_application"
	android:paddingBottom="@dimen/activity_vertical_margin"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:orientation="vertical"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:context=".AboutApplicationActivity"
	tools:showIn="@layout/activity_about_application">

	<ImageView
		android:id="@+id/application_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/toolbar_about_application"
		android:layout_centerHorizontal="true"
		android:src="@mipmap/ic_launcher"
		android:contentDescription="@string/about_application_logo_description"/>

	<TextView
		android:id="@+id/textView_introduction"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/application_logo"
		android:text="@string/about_application_introduction"/>

	<TextView
		android:id="@+id/textView_setup_prompt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/textView_introduction"
		android:text="@string/about_application_setup_prompt"
		android:layout_marginTop="@dimen/activity_vertical_margin"/>

	<TextView
		android:id="@+id/intro_tanet"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/textView_setup_prompt"
		android:text="@string/test_school"
		android:layout_marginTop="@dimen/activity_vertical_margin"/>

	<TextView
		android:id="@+id/textView_about_application_header_seeking_for_help"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/intro_tanet"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:text="@string/about_application_header_seeking_for_help"/>

	<TextView
		android:id="@+id/textView_seeking_for_help"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_application_seeking_for_help"
		android:layout_below="@+id/textView_about_application_header_seeking_for_help"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"/>

	<TextView
		android:id="@+id/textView_about_application_issue_tracker_url"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/about_application_issue_tracker_url"
		android:layout_below="@+id/textView_seeking_for_help"
		android:layout_alignParentLeft="true"
		android:layout_alignParentStart="true"/>

</RelativeLayout>
